syntax = "proto3";

import "aelf/core.proto";

message CallbackInput {
    aelf.Hash query_id = 1;
    bytes result = 2;
}